added call to view all position

--- a/career.html
+++ b/career.html
@@ -100,7 +100,7 @@
                   mi, id egestas urna mattis et.
                 </p>
                 <button class="zakirSoft__button px-4">
-                  <a href="#"> view all position </a>
+                  <a href="career.html#positions"> view all position </a>
                 </button>
               </div>
             </div>
@@ -243,7 +243,7 @@
       </section>
       <!-- Gallery Section End -->
   
-      <section class="positions">
+      <section class="positions" id="positions">
         <div class="container positions__container">
           <div class="row">
             <div class="section">
