--- a/newsDetails.html
+++ b/newsDetails.html
@@ -59,7 +59,7 @@
                       <li> <a href="index.html"> <span>01</span> Home </a> </li>
                       <li> <a href="about.html"> <span>02</span> About </a> </li>
                       <li> <a href="work.html"> <span>03</span> Work </a> </li>
-                      <li> <a href="career.html" class="active"> <span>04</span> Career </a> </li>
+                      <li> <a href="career.html" > <span>04</span> Career </a> </li>
                       <li> <a href="contact.html"> <span>05</span> Contact </a> </li>
                     </ul>
                   </div>
@@ -126,6 +126,7 @@
         </div>
         <div class="row">
           <div class="col-lg-4 col-md-6">
+          <a href="#">
             <div class="articles__contentBox card">
               <div class="articles__contentImg">
                 <img
@@ -134,7 +135,7 @@
                 />
               </div>
               <div class="articles__contentText">
-                <h2 class="articles__title">We are Hiring</h2>
+                <h5 class="articles__title"><a href="#">We are Hiring</a></h5>
                 <p class="articles__brief">
                   Curabitur mollis elit eu libero eleifend, a aliquet magna
                   consectetur. Fusce at accumsan quam. Ut maximus facilisis
@@ -148,8 +149,10 @@
                 </a>
               </div>
             </div>
+          </a>
           </div>
           <div class="col-lg-4 col-md-6">
+           <a href="#">
             <div class="articles__contentBox card">
               <div class="articles__contentImg">
                 <img
@@ -158,7 +161,7 @@
                 />
               </div>
               <div class="articles__contentText">
-                <h5 class="articles__title">We are Hiring</h5>
+                <h5 class="articles__title"><a href="#">We are Hiring</a></h5>
                 <p class="articles__brief">
                   Curabitur mollis elit eu libero eleifend, a aliquet magna
                   consectetur. Fusce at accumsan quam. Ut maximus facilisis
@@ -172,8 +175,10 @@
                 </a>
               </div>
             </div>
+           </a>
           </div>
           <div class="col-lg-4 col-md-6">
+           <a href="#">
             <div class="articles__contentBox card">
               <div class="articles__contentImg">
                 <img
@@ -182,7 +187,7 @@
                 />
               </div>
               <div class="articles__contentText">
-                <h5 class="articles__title">We are Hiring</h5>
+                <h5 class="articles__title"><a href="#">We are Hiring</a></h5>
                 <p class="articles__brief">
                   Curabitur mollis elit eu libero eleifend, a aliquet magna
                   consectetur. Fusce at accumsan quam. Ut maximus facilisis
@@ -196,6 +201,7 @@
                 </a>
               </div>
             </div>
+           </a>
           </div>
         </div>
       </div>
